Update Resume section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-
+  <main id="main">
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -104,7 +104,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>aadeshpatil650@gmail.com</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://aadeshpatil.herokuapp.com/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://aadeshpatil.netlify.app/">https://aadeshpatil.netlify.app</a></li>
                 </ul>
               </div>
             </div>
@@ -123,8 +123,7 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>
-            Seeking an opportunity with an organization where
-            I can utilize and enhance my learning skill in the field of work.
+          
           </p>
         </div>
 
@@ -136,21 +135,25 @@
               <p><em>Innovative and deadline-driven Software Developer with 1+ years of experience designing and
                   developing user-centered software from initial concept to final, polished deliverable.</em></p>
               <ul>
-                <li>Pune, Maharastra, India</li>
-                <li>+91 9960776997</li>
-                <li>aadeshpatil650@gmail.com</li>
+                <li><i class="bi bi-geo-alt"></i>&nbsp;&nbsp;      Pune, Maharastra, India</li>
+                <li><i class="bi bi-phone"></i>&nbsp;  &nbsp;   +91 9960776997</li>
+                <li><i class="bi bi-envelope"></i>&nbsp;  &nbsp;   aadeshpatil650@gmail.com</li>
               </ul>
             </div>
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Associate Software Developer</h4>
-              <h5>2021 - Present</h5>
+              <h5>June 2021 - Present</h5>
               <p> Kleem Research and Marketing<em> (Pune, Maharashtra) </em></p>
               <ul>
-                <li>Built web app for Insurance Case management.</li>
-              <li> Use Kotlin to Build Android for Tracking the
-                Insurance Case Process.</li>
-                <li> Handled full-stack development for client projects</li>
+                <li>Planned, wrote, and debugged web applications using Angular and Spring-Boot.</li>
+                <li>Integrated web Services using Angular 8 and render the JSON data on UI.</li>
+                <li>Fixed bugs and documenting processes to increase efficiency by 18% .</li>
+                <li>Developed API using Spring Boot, Hibernate, and Restful Services.</li>
+                <li>Worked with MySQL to manage user inputted data across multiple platforms including web and mobile apps.</li>
+                <li>Assisted in development of the mobile application for Android using Kotlin and Firebase.</li>
+                <li>Collaborated with team members using version control systems such as Git to organize modifications and assign
+                tasks.</li>
               </ul>
             </div>
             <h3 class="resume-title">Education</h3>
@@ -173,47 +176,49 @@
             <h3 class="resume-title">Academic Projects</h3>
             <div class="resume-item">
               <h4>Face Recognition System Desktop-Based Application</h4>
-              <h5>April, 2021 - June, 2021</h5>
-              <p><em>Its an Attendance based facial recognition project which
-                provides paper-free attendance for colleges and company's
-                purpose. </em></p>
-              <p>Technology Used</p>
+              <h5><pre> Python, MySQL, Open-CV, LBPH algorithm</pre></h5>
               <ul>
-                <li>Python</li>
-                <li>OpenCV</li>
-                <li>MySQL</li>
-                <li>LBPH Algorithm</li>
+                <li>Designed a Face Recognition system using Python to take the attendance of user.</li>
+                <li>
+                  Used Tkinter to create a GUI that supports actions such as Login,Adding new users,Training the data-set,Saving
+                  Attendance, etc.
+                </li>
+                <li>Implemented LBPH algorithm for getting data from gray scale image.</li>
+             
               </ul>
             </div>
             <div class="resume-item">
               <h4>Cryptography Based Web Application</h4>
-              <h5>Dec, 2021 - April, 2022</h5>
-              <p><em>Its an Web application which provides end to end encryption to Messages, Images and PDFS.</em></p>
-              <p>Technology Used</p>
-              <ul>
-                <li>Angular</li>
-                <li>Spring Boot</li>
-                <li>MySQL</li>
-                <li>AES Algorithm</li>
+              <h5><pre>Java, Angular, Spring-Boot, AES Algorithm</pre> </h5>
+             <ul>
+              <li>Developed a web application using Angular as the front-end and Spring Boot as the back-end to securely send data
+                from user to user.</li>
+                <li>
+                  Used Rest API for communication between UI and back end.
+                </li>
+              <li>Implemented Advanced Encryption Standard (AES) algorithm for Encryption and Decryption of Messages, Images
+                and PDF.</li>
+                <li>Implemented object-oriented programming practices such as Inheritance,Encapsulation to create different APIs.
+                </li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Ev Charging Services an Android Application</h4>
-              <h5>April, 2022 - June, 2022</h5>
-              <p><em>Its an Android App which made for Electric Vehicles Owner to easily find out nearest charging station</em></p>
-              <p>Technology Used</p>
-              <ul>
-                <li>Android</li>
-                <li>Java</li>
-                <li>Firebase</li>
-              </ul>
+              <h5><pre>Java, XML, Google Firebase, Android</pre> </h5>
+            <ul>
+              <li> Developed an Android application using Java and Android Studio to easily find nearby charging stations for electric
+                vehicle owners.</li>
+                <li>Implemented Firebase Messaging Services for showing Notifications to users</li> 
+                <li> Utilized the layout editor to create a UI for the application in order to allow different scenes to interact with each
+                  other.</li>
+            </ul>
             </div>
           </div>
         </div>
 
       </div>
       <div class="my-3 text-center">
-      <a type="button" class="btn btn-info" href="assets/resume/AadeshPatil.pdf" target="_blank">Download Resume</a>
+      <a type="button" class="btn btn-info" href="assets/resume/AadeshPatil-Resume.pdf" target="_blank">Download Resume</a>
        </div>
     </section><!-- End Resume Section -->
 
@@ -274,7 +279,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-red">
               <div class="icon">
-                <img src="assets/img/skills/spring_boot.png" alt="" width="80px" height="60px">
+                <img src="assets/img/skills/spring_boot.png" alt="" width="100px" height="60px">
               </div>
               <h4><a href=""></a>Spring Boot</h4>
              <p>Spring Boot is an open source, microservice-based Java web framework</p>
@@ -513,7 +518,7 @@
       </div>
     </div>
   </footer><!-- End Footer -->
-
+</main>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
@@ -540,6 +545,7 @@
 
     <script type="text/javascript">
        function sendMail() {
+
         var validRegex = /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/;
         let email = document.getElementById("email").value;
         if (email.match(validRegex)) {
