update resume and added github link

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
               class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/aadesh-patil-3b8474193/" target="_blank" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/AadeshPatil/" target="_blank" class="linkedin"><i
+                class="bx bxl-github"></i></a>
         </div>
 
       </div>
@@ -84,7 +86,7 @@
 
           <div class="row">
             <div class="col-lg-4">
-              <img src="assets/img/profile_Image.JPG" class="img-fluid" alt="">
+              <img src="assets/img/profile_Image.JPG" class="img-fluid pp" alt="">
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>SOFTWARE DEVELOPER.</h3>
@@ -141,11 +143,10 @@
                   <li><i class="bi bi-envelope"></i>&nbsp; &nbsp; aadeshpatil650@gmail.com</li>
                 </ul>
               </div>
-              <!-- <h3 class="resume-title">Professional Experience</h3> -->
-              <!-- <div class="resume-item">
+              <h3 class="resume-title">Professional Experience</h3>
+              <div class="resume-item">
               <h4>Associate Software Developer</h4>
-              <h5>June 2021 - Present</h5>
-              <p> Kleem Research and Marketing<em> (Pune, Maharashtra) </em></p>
+              <p> <h5>Kleem Research and Marketing<em> (Pune, Maharashtra) </em></h5><h5>June 2021 - Present</h5></p>
               <ul>
                 <li>Planned, wrote, and debugged web applications using Angular and Spring-Boot.</li>
                 <li>Integrated web Services using Angular 8 and render the JSON data on UI.</li>
@@ -156,7 +157,7 @@
                 <li>Collaborated with team members using version control systems such as Git to organize modifications and assign
                 tasks.</li>
               </ul>
-            </div> -->
+            </div>
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>Bachelors of Computer Applications</h4>
@@ -241,7 +242,7 @@
 
         </div>
         <div class="my-3 text-center">
-          <a type="button" class="btn btn-info" href="assets/resume/AadeshPatil-Resume.pdf" target="_blank">Download
+          <a type="button" class="btn btn-info" href="assets/resume/AadeshPatil_Resume.pdf" target="_blank">Download
             Resume</a>
         </div>
       </section><!-- End Resume Section -->
@@ -538,6 +539,8 @@
               class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/aadesh-patil-3b8474193/" target="_blank" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/AadeshPatil/" target="_blank" class="linkedin"><i
+              class="bx bxl-github"></i></a>
         </div>
         <div class="copyright">
           &copy; Copyright. All Rights Reserved
