profile photo update and some ui changes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 </head>
 
 <body>
+  <!-- <header id="home" class="header">
+    <div class="overlay"></div>
+    <div class="header-content container">
+        <h1 class="header-title">
+            <span class="up">HI!</span>
+            <span class="down">I am John Doe</span>
+        </h1>
+        <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
+
+        <button class="btn btn-primary">Visit My Works</button>
+    </div>              
+</header> -->
   <main id="main">
     <!-- ======= Mobile nav toggle button ======= -->
     <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
@@ -57,17 +69,18 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
         <h1>Aadesh Patil</h1>
+
         <p><span class="typed" data-typed-items="Software Developer"></span></p>
+
         <div class="social-links">
           <a href="mailto:aadeshpatil650@gmail.com" target="_blank" class="facebook"><i class="bx bx-envelope"></i></a>
           <a href="https://www.instagram.com/aadesh.patil_/" target="_blank" class="instagram"><i
               class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/aadesh-patil-3b8474193/" target="_blank" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/AadeshPatil/" target="_blank" class="linkedin"><i
-                class="bx bxl-github"></i></a>
-        </div>
+          <a href="https://github.com/AadeshPatil/" target="_blank" class="linkedin"><i class="bx bxl-github"></i></a>
 
+        </div>
       </div>
     </section><!-- End Hero -->
 
@@ -77,19 +90,20 @@
       <section id="about" class="about">
         <div class="container" data-aos="fade-up">
 
-          <div class="section-title">
-            <h2>About</h2>
-            <p>
 
-            </p>
-          </div>
 
           <div class="row">
             <div class="col-lg-4">
-              <img src="assets/img/profile_Image.JPG" class="img-fluid pp" alt="">
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <img src="assets/img/profile_Image.png" class="img-fluid1 pp" alt="">
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <h3>SOFTWARE DEVELOPER.</h3>
+              <div class="section-title">
+                <h2>About</h2>
+                <p>I have over 1.8 years of experience as a software engineer. My expertise lies in Java, Spring &
+                  Spring Boot Framework, Microservice Architecture, Cloud Technologies like Azure, Relational Databases
+                  like Hibernate & MySQL, as well as UI technologies like Javascript & Angular.</p>
+              </div>
               <p class="fst-italic">
                 Personal Details
               </p>
@@ -104,7 +118,7 @@
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>DOB:</strong> <span>22/04/2001</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                       <span>aadeshpatil650@gmail.com</span>
                     </li>
@@ -112,6 +126,11 @@
                         href="https://aadeshpatil.netlify.app/">https://aadeshpatil.netlify.app</a></li>
                   </ul>
                 </div>
+              </div>
+              <div class="my-3">
+                <a type="button" class="btn btn-info" href="assets/resume/AadeshPatil_Resume.pdf"
+                  target="_blank">Download
+                  Resume</a>
               </div>
             </div>
           </div>
@@ -145,19 +164,24 @@
               </div>
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
-              <h4>Associate Software Developer</h4>
-              <p> <h5>Kleem Research and Marketing<em> (Pune, Maharashtra) </em></h5><h5>June 2021 - Present</h5></p>
-              <ul>
-                <li>Planned, wrote, and debugged web applications using Angular and Spring-Boot.</li>
-                <li>Integrated web Services using Angular 8 and render the JSON data on UI.</li>
-                <li>Fixed bugs and documenting processes to increase efficiency by 18% .</li>
-                <li>Developed API using Spring Boot, Hibernate, and Restful Services.</li>
-                <li>Worked with MySQL to manage user inputted data across multiple platforms including web and mobile apps.</li>
-                <li>Assisted in development of the mobile application for Android using Kotlin and Firebase.</li>
-                <li>Collaborated with team members using version control systems such as Git to organize modifications and assign
-                tasks.</li>
-              </ul>
-            </div>
+                <h4>Associate Software Developer</h4>
+                <p>
+                <h5>Kleem Research and Marketing<em> (Pune, Maharashtra) </em></h5>
+                <h5>June 2021 - Present</h5>
+                </p>
+                <ul>
+                  <li>Planned, wrote, and debugged web applications using Angular and Spring-Boot.</li>
+                  <li>Integrated web Services using Angular 8 and render the JSON data on UI.</li>
+                  <li>Fixed bugs and documenting processes to increase efficiency by 18% .</li>
+                  <li>Developed API using Spring Boot, Hibernate, and Restful Services.</li>
+                  <li>Worked with MySQL to manage user inputted data across multiple platforms including web and mobile
+                    apps.</li>
+                  <li>Assisted in development of the mobile application for Android using Kotlin and Firebase.</li>
+                  <li>Collaborated with team members using version control systems such as Git to organize modifications
+                    and assign
+                    tasks.</li>
+                </ul>
+              </div>
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>Bachelors of Computer Applications</h4>
@@ -241,10 +265,7 @@
           </div>
 
         </div>
-        <div class="my-3 text-center">
-          <a type="button" class="btn btn-info" href="assets/resume/AadeshPatil_Resume.pdf" target="_blank">Download
-            Resume</a>
-        </div>
+
       </section><!-- End Resume Section -->
 
       <!-- ======= Skills Section ======= -->
@@ -258,7 +279,36 @@
 
           <div class="row">
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box iconbox-yellow">
+                <div class="icon">
+                  <img src="assets/img/skills/angular.png" alt="" width="60px" height="60px">
+                </div>
+                <h4><a href="">Angular</a></h4>
+                <p>Angular is a TypeScript-based free and open-source web application framework.</p>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+              <div class="icon-box iconbox-red">
+                <div class="icon">
+                  <img src="assets/img/skills/spring_boot.png" alt="" width="100px" height="60px">
+                </div>
+                <h4><a href=""></a>Spring Boot</h4>
+                <p>Spring Boot is an open source, microservice-based Java web framework</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+              <div class="icon-box iconbox-teal">
+                <div class="icon">
+                  <img src="assets/img/skills/rest_api.png" alt="" width="60px" height="50px">
+                </div>
+                <h4><a href="">Rest API</a></h4>
+                <p>A REST API is help to communicate with back-end to front-end</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch " data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box iconbox-blue">
                 <div class="icon">
                   <img src="assets/img/skills/java.png" alt="" width="60px" height="60px">
@@ -266,10 +316,8 @@
                 <h4><a href="">JAVA</a></h4>
                 <p>Java is a high-level, class-based, object-oriented programming language that is designed to have as
                   few implementation dependencies as possible</p>
-
               </div>
             </div>
-
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
               data-aos-delay="200">
               <div class="icon-box iconbox-orange ">
@@ -293,37 +341,9 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon-box iconbox-yellow">
-                <div class="icon">
-                  <img src="assets/img/skills/angular.png" alt="" width="60px" height="60px">
-                </div>
-                <h4><a href="">Angular</a></h4>
-                <p>Angular is a TypeScript-based free and open-source web application framework.</p>
-              </div>
-            </div>
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-              <div class="icon-box iconbox-red">
-                <div class="icon">
-                  <img src="assets/img/skills/spring_boot.png" alt="" width="100px" height="60px">
-                </div>
-                <h4><a href=""></a>Spring Boot</h4>
-                <p>Spring Boot is an open source, microservice-based Java web framework</p>
-              </div>
-            </div>
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-              <div class="icon-box iconbox-teal">
-                <div class="icon">
-                  <img src="assets/img/skills/rest_api.png" alt="" width="60px" height="50px">
-                </div>
-                <h4><a href="">Rest API</a></h4>
-                <p>A REST API (also known as RESTful API) is an application programming interface (API or web API) that
-                  conforms to the constraints of REST architectural style and allows for interaction with RESTful web
-                  services</p>
-              </div>
-            </div>
+
 
           </div>
 
@@ -539,8 +559,7 @@
               class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/aadesh-patil-3b8474193/" target="_blank" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/AadeshPatil/" target="_blank" class="linkedin"><i
-              class="bx bxl-github"></i></a>
+          <a href="https://github.com/AadeshPatil/" target="_blank" class="linkedin"><i class="bx bxl-github"></i></a>
         </div>
         <div class="copyright">
           &copy; Copyright. All Rights Reserved
