--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
+        <p>Hi There, I'm
         <h1>Aadesh Patil</h1>
-
+        </p>
         <p><span class="typed" data-typed-items="Software Developer"></span></p>
 
         <div class="social-links">
@@ -79,8 +80,11 @@
           <a href="https://www.linkedin.com/in/aadesh-patil-3b8474193/" target="_blank" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/AadeshPatil/" target="_blank" class="linkedin"><i class="bx bxl-github"></i></a>
+          <a href="assets/resume/AadeshPatil_Resume.pdf" target="_blank" class="linkedin"><i class="bx bx-file"></i></a>
 
         </div>
+
+        
       </div>
     </section><!-- End Hero -->
 
@@ -128,7 +132,7 @@
                 </div>
               </div>
               <div class="my-3">
-                <a type="button" class="btn btn-info" href="assets/resume/AadeshPatil_Resume.pdf"
+                <a type="button" class="btn btn-outline-primary" href="assets/resume/AadeshPatil_Resume.pdf"
                   target="_blank">Download
                   Resume</a>
               </div>
@@ -619,7 +623,7 @@
       }
     }
   </script>
-
+<script src="//code.tidio.co/yczybhe794jdpifcdjdhgla7fszspdlp.js" async></script>
 </body>
 
 </html>
