profile update and new company name added

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         </div>
 
-        
+
       </div>
     </section><!-- End Hero -->
 
@@ -114,7 +114,7 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 April 2001</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Aadesh Patil</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9960776997</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pune, Maharastra, India </span>
                     </li>
@@ -168,12 +168,20 @@
               </div>
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
+                <h4>Backend Developer</h4>
+                <p>
+                <h5>Zerot Energy<em> (Pune, Maharashtra) </em></h5>
+                <h5>Jan 2023 - Present</h5>
+                </p>
+
+              </div>
+              <div class="resume-item">
                 <h4>Associate Software Developer</h4>
                 <p>
                 <h5>Kleem Research and Marketing<em> (Pune, Maharashtra) </em></h5>
-                <h5>June 2021 - Present</h5>
+                <h5>June 2021 - Jan 2023</h5>
                 </p>
-                <ul>
+                <!-- <ul>
                   <li>Planned, wrote, and debugged web applications using Angular and Spring-Boot.</li>
                   <li>Integrated web Services using Angular 8 and render the JSON data on UI.</li>
                   <li>Fixed bugs and documenting processes to increase efficiency by 18% .</li>
@@ -184,8 +192,11 @@
                   <li>Collaborated with team members using version control systems such as Git to organize modifications
                     and assign
                     tasks.</li>
-                </ul>
+                </ul> -->
               </div>
+            </div>
+            <div class="col-lg-6">
+
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>Bachelors of Computer Applications</h4>
@@ -199,70 +210,6 @@
                   <li>Object-Oriented
                     Programming</li>
                   <li>Cloud</li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-6">
-
-              <h3 class="resume-title">Academic Projects</h3>
-
-
-              <div class="resume-item">
-                <h4>Ev Charging Services an Android Application</h4>
-                <h5>
-                  <pre>Java, XML, Google Firebase, Android</pre>
-                </h5>
-                <ul>
-                  <li> Developed an Android application using Java and Android Studio to easily find nearby charging
-                    stations for electric
-                    vehicle owners. </li>
-                  <li>Implemented Firebase Messaging Services for showing Notifications to users.</li>
-                  <li>Utilized the layout editor to create a UI for the application in order to allow different scenes
-                    to interact with each other.</li>
-                  <li>Developed app integration with REST and other APIs for Google Maps, payment processors, and other
-                    services.</li>
-                  <li>Collaborated with team members using version control systems such as Git to organize modifications
-                    and assign tasks.</li>
-                </ul>
-              </div>
-              <div class="resume-item">
-                <h4>Cryptography Based Web Application</h4>
-                <h5>
-                  <pre>Java, Angular, Spring-Boot, AES Algorithm</pre>
-                </h5>
-                <ul>
-                  <li>Developed a web application using Angular as the front-end and Spring Boot as the back-end to
-                    securely send data
-                    from user to user.</li>
-                  <li>Integrated web Services using Angular 8 and render the JSON data on UI.</li>
-                  <li>Used Rest API for communication between UI and back end.</li>
-                  <li>Implemented Advanced Encryption Standard (AES) algorithm for Encryption and Decryption of
-                    Messages, Images
-                    and PDF.</li>
-                  <li>Worked with MySQL to manage user inputted data.</li>
-                  <li>Implemented object-oriented programming practices such as Inheritance, Encapsulation to create
-                    different APIs.</li>
-                  <li>Used winSCP and putty for deployment of code to cloud server .</li>
-                </ul>
-              </div>
-              <div class="resume-item">
-                <h4>Face Recognition System Desktop-Based Application</h4>
-                <h5>
-                  <pre> Python, MySQL, Open-CV, LBPH algorithm</pre>
-                </h5>
-                <ul>
-                  <li>Designed a Flight ticket booking system using Spring micro-services, Rest-API, and Front-end as
-                    Angular 8.
-                  </li>
-                  <li>Developed custom APIs that can be integrated into the users’ app.
-                  </li>
-                  <li>Used JPA mapping techniques such as One to One,Many to One and Many to Many mappings to represent
-                    relation
-                    between various entities in the project.</li>
-                  <li>Configured Java application with Spring, Hibernate, Dao & Service layers.
-                  </li>
-                  <li>Planned, wrote, and debugged application with complete accuracy.
-                  </li>
                 </ul>
               </div>
             </div>
@@ -566,7 +513,7 @@
           <a href="https://github.com/AadeshPatil/" target="_blank" class="linkedin"><i class="bx bxl-github"></i></a>
         </div>
         <div class="copyright">
-          &copy; Copyright. All Rights Reserved
+          &copy; Copyright 2023. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
@@ -623,7 +570,7 @@
       }
     }
   </script>
-<script src="//code.tidio.co/yczybhe794jdpifcdjdhgla7fszspdlp.js" async></script>
+  <script src="//code.tidio.co/yczybhe794jdpifcdjdhgla7fszspdlp.js" async></script>
 </body>
 
 </html>
